@@ -1,5 +1,9 @@
 === 1.4.0 ===
 
+2007-07-12  Jonathon Jongsma  <jjongsma@gnome.org>
+
+	* docs/reference/Makefile.am: hacky workaround to get distcheck to pass
+
 2007-07-10  Jonathon Jongsma  <jjongsma@gnome.org>
 
 	* NEWS: Update NEWS for release
